[#397] Input Parameters: Replace deprecated newInstance() method.