@@ -15,6 +15,7 @@ package com.gs.dmn.maven;
 import com.gs.dmn.dialect.DMNDialectDefinition;
 import com.gs.dmn.log.BuildLogger;
 import com.gs.dmn.maven.configuration.components.DMNTransformerComponent;
+import com.gs.dmn.runtime.DMNRuntimeException;
 import com.gs.dmn.serialization.DefaultTypeDeserializationConfigurer;
 import com.gs.dmn.serialization.TypeDeserializationConfigurer;
 import com.gs.dmn.transformation.CompositeDMNTransformer;
@@ -51,7 +52,11 @@ public abstract class AbstractDMNMojo<NUMBER, DATE, TIME, DATE_TIME, DURATION, T
     public Map<String, String> inputParameters;
 
     protected DMNDialectDefinition<NUMBER, DATE, TIME, DATE_TIME, DURATION, TEST> makeDialect(Class<?> dialectClass) throws InstantiationException, IllegalAccessException {
-        return (DMNDialectDefinition<NUMBER, DATE, TIME, DATE_TIME, DURATION, TEST>) dialectClass.newInstance();
+        try {
+            return (DMNDialectDefinition<NUMBER, DATE, TIME, DATE_TIME, DURATION, TEST>) dialectClass.getDeclaredConstructor().newInstance();
+        } catch (Exception e) {
+            throw new DMNRuntimeException(String.format("Cannot instantiate dialect '%s'", dialectClass == null ? null : dialectClass.getName()));
+        }
     }
 
     protected DMNValidator makeDMNValidator(String[] dmnValidatorClassNames, BuildLogger logger) throws Exception {
@@ -64,7 +69,7 @@ public abstract class AbstractDMNMojo<NUMBER, DATE, TIME, DATE_TIME, DURATION, T
             try {
                 dmnValidators.add((DMNValidator) dmnValidatorClass.getConstructor(new Class[]{BuildLogger.class}).newInstance(new Object[]{logger}));
             } catch (Exception e) {
-                dmnValidators.add((DMNValidator) dmnValidatorClass.newInstance());
+                dmnValidators.add((DMNValidator) dmnValidatorClass.getDeclaredConstructor().newInstance());
             }
         }
         return new CompositeDMNValidator(dmnValidators);
@@ -81,7 +86,7 @@ public abstract class AbstractDMNMojo<NUMBER, DATE, TIME, DATE_TIME, DURATION, T
             try {
                 transformer = (DMNTransformer<TEST>) dmnTransformerClass.getConstructor(new Class[]{BuildLogger.class}).newInstance(new Object[]{logger});
             } catch (Exception e) {
-                transformer = (DMNTransformer<TEST>) dmnTransformerClass.newInstance();
+                transformer = (DMNTransformer<TEST>) dmnTransformerClass.getDeclaredConstructor().newInstance();
             }
 
             transformer.configure(dmnTransformerComponent.getConfiguration());
@@ -100,7 +105,7 @@ public abstract class AbstractDMNMojo<NUMBER, DATE, TIME, DATE_TIME, DURATION, T
             try {
                 detectors.add((LazyEvaluationDetector) detectorClass.getConstructor(new Class[]{InputParameters.class, BuildLogger.class}).newInstance(new Object[]{inputParameters, logger}));
             } catch (Exception e) {
-                detectors.add((LazyEvaluationDetector) detectorClass.newInstance());
+                detectors.add((LazyEvaluationDetector) detectorClass.getDeclaredConstructor().newInstance());
             }
         }
         return new CompositeLazyEvaluationDetector(detectors);
@@ -116,14 +121,14 @@ public abstract class AbstractDMNMojo<NUMBER, DATE, TIME, DATE_TIME, DURATION, T
             return (TypeDeserializationConfigurer)deserializerClass.getConstructor(new Class[]{BuildLogger.class}).newInstance(new Object[]{logger});
         }
         catch (Exception ex) {
-            return (TypeDeserializationConfigurer)deserializerClass.newInstance();
+            return (TypeDeserializationConfigurer)deserializerClass.getDeclaredConstructor().newInstance();
         }
     }
 
     protected TemplateProvider makeTemplateProvider(String templateProviderClassName, BuildLogger logger) throws Exception {
         Class<?> templateProviderClass = Class.forName(templateProviderClassName);
         try {
-            return (TemplateProvider) templateProviderClass.newInstance();
+            return (TemplateProvider) templateProviderClass.getDeclaredConstructor().newInstance();
         } catch (Exception e) {
             throw new IllegalArgumentException(String.format("Cannot build template provider '%s'", templateProviderClass));
         }
